@@ -254,37 +254,7 @@ class TestCase::Net::SSLeay::SSL_CTX {
       
     }
     
-    # set_session_cache_mode, get_session_cache_mode
-    {
-      my $ssl_method = Net::SSLeay::SSL_METHOD->TLS_method;
-      
-      my $ssl_ctx = Net::SSLeay::SSL_CTX->new($ssl_method);
-      
-      $ssl_ctx->set_session_cache_mode(SSL->SSL_SESS_CACHE_OFF);
-      
-      $ssl_ctx->set_session_cache_mode(SSL->SSL_SESS_CACHE_CLIENT);
-      
-      $ssl_ctx->set_session_cache_mode(SSL->SSL_SESS_CACHE_SERVER);
-      
-      $ssl_ctx->set_session_cache_mode(SSL->SSL_SESS_CACHE_BOTH);
-      
-      $ssl_ctx->set_session_cache_mode(SSL->SSL_SESS_CACHE_NO_AUTO_CLEAR);
-      
-      $ssl_ctx->set_session_cache_mode(SSL->SSL_SESS_CACHE_NO_INTERNAL_LOOKUP);
-      
-      $ssl_ctx->set_session_cache_mode(SSL->SSL_SESS_CACHE_NO_INTERNAL_STORE);
-      
-      $ssl_ctx->set_session_cache_mode(SSL->SSL_SESS_CACHE_NO_INTERNAL);
-      
-      my $mode = $ssl_ctx->get_session_cache_mode;
-      
-      unless ($mode & SSL->SSL_SESS_CACHE_NO_INTERNAL) {
-        return 0;
-      }
-      
-    }
-    
-    # set_session_cache_mode, get_session_cache_mode
+    # set_post_handshake_auth
     {
       my $ssl_method = Net::SSLeay::SSL_METHOD->TLS_method;
       
